SourceOrg/src/objects/Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Program_Level__c</fullName>
        <description>Program Level Identifies the degree/level for the Job/Placement</description>
        <inlineHelpText>Program Level Identifies the degree/level for the Job/Placement</inlineHelpText>
        <label>Program Level</label>
        <picklist>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RU_JointPatent_Flag__c</fullName>
        <description>Set to 1 when Engagement is a JointPatent</description>
        <formula>IF(ISPICKVAL(Interaction_Type__c,&apos;Joint Patent&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Set to 1 when Engagement is a JointPatent</inlineHelpText>
        <label>RU Joint Patent Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RU_Joint_Patents_Issued_Flag__c</fullName>
        <description>For Rollup RU Joint Patents Issued Count</description>
        <formula>IF(RU_JointPatent_Flag__c + RU_Not_FiledUnknown_Flag__c  &lt;= 1,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Rollup RU Joint Patents Issued Count</inlineHelpText>
        <label>RU Joint Patents Issued Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RU_MainCount__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Hidden Count For Rollup To Master Org; This should always be 1 on all interactions.</description>
        <inlineHelpText>Hidden Count For Rollup To Master Org; This should always be 1 on all interactions.</inlineHelpText>
        <label>RU MainCount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RU_Not_FiledUnknown_Flag__c</fullName>
        <description>Joint Patents Filed/Unknown should not be counted as Issued; So, this flag is set to 0 when status=Filed/Unknown</description>
        <formula>IF(OR(ISPICKVAL(Status__c,&apos;Filed&apos;),ISPICKVAL(Status__c,&apos;Unknown&apos;)),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Joint Patents Filed/Unknown should not be counted as Issued; So, this flag is set to 0 when status=Filed/Unknown</inlineHelpText>
        <label>RU Not Filed/Unknown Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Hidden Field To Control Picklists</description>
        <formula>RecordType.DeveloperName</formula>
        <inlineHelpText>Hidden Field To Control Picklists</inlineHelpText>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Master_Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Master Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Interactions_Of_MasterOrg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Organization_Name__c</fullName>
        <formula>$Organization.Name</formula>
        <label>Source Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Organization__c</fullName>
        <label>Source Organization</label>
        <referenceTo>Source_Organization__c</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Related_Interactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_System_Last_Modified_Date__c</fullName>
        <description>Last Modified Date In The Source System</description>
        <inlineHelpText>Last Modified Date In The Source System</inlineHelpText>
        <label>Source System Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SponsoredResearchProposals__c</fullName>
        <description># of Sponsored Research proposals per organizations</description>
        <inlineHelpText># of Sponsored Research proposals per organizations</inlineHelpText>
        <label># Sponsored Research Proposals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date/Time</description>
        <inlineHelpText>Enter Start Date/Time</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Term__c</fullName>
        <description>Joint Supervisor Start Term</description>
        <inlineHelpText>Joint Supervisor Start Term</inlineHelpText>
        <label>Start Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Event Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <controllingField>Interaction_Type__c</controllingField>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anticipated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned To 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulkdelete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate (Entity Deceased)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraudulent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-term Cultiv/Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nationalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Assigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Task Subject</description>
        <inlineHelpText>Task Subject</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Contract/Agreement/Award Termination Date</description>
        <inlineHelpText>Enter Contract/Agreement/Award Termination Date</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Event Name/Title</description>
        <inlineHelpText>Enter Event Name/Title</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Topic of discussion/Title for the Company Onsite Visit, Key Executive Visit, KU Visit, Seminar or Workshop</description>
        <inlineHelpText>Topic of discussion/Title for the Company Onsite Visit, Key Executive Visit, KU Visit, Seminar or Workshop</inlineHelpText>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <description>Job/Internship Work Type</description>
        <inlineHelpText>Job/Internship Work Type</inlineHelpText>
        <label>Work Type</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time Experienced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year When an Interaction took Place</description>
        <inlineHelpText>Year When an Interaction took Place</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Engagement</label>
    <listViews>
        <fullName>Agreements</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Agreement</value>
        </filters>
        <label>Agreements</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Interaction_Type__c</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Engagements_From_SFDC_Activities</fullName>
        <columns>NAME</columns>
        <columns>Interaction_Type__c</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Subject__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Source_System__c</field>
            <operation>equals</operation>
            <value>SFDC</value>
        </filters>
        <label>All Engagements From SFDC Activities</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Calls</fullName>
        <columns>NAME</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Engagement - Call</value>
        </filters>
        <label>Calls</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Capstone_Projects</fullName>
        <columns>NAME</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Capstone Project</value>
        </filters>
        <label>Capstone Projects</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Career_Services_Events</fullName>
        <columns>NAME</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Event - Career Services</value>
        </filters>
        <label>Career Services Events</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Company_Onsite_Visits</fullName>
        <columns>NAME</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Engagement - Company Onsite Visit</value>
        </filters>
        <label>Company Onsite Visits</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Continuing_Education_Events</fullName>
        <columns>NAME</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Event - Continuing Education</value>
        </filters>
        <label>Continuing Education Events</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Emails</fullName>
        <columns>NAME</columns>
        <columns>Interaction_Type__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Engagement - Email</value>
        </filters>
        <label>Emails</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Endowments</fullName>
        <columns>NAME</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Endowment</value>
        </filters>
        <label>Endowments</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Executive_Briefings</fullName>
        <columns>NAME</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Engagement - Executive Briefing</value>
        </filters>
        <label>Executive Briefings</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Internships</fullName>
        <columns>NAME</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Internship</value>
        </filters>
        <label>Internships</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Job_Postings</fullName>
        <columns>NAME</columns>
        <columns>Source_Organization__c</columns>
        <columns>Title__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Job Posting</value>
        </filters>
        <label>Job Postings</label>
    </listViews>
    <listViews>
        <fullName>Jobs_Placements</fullName>
        <columns>NAME</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Job/Placement Count,Job/Placement</value>
        </filters>
        <label>Jobs/Placements</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Joint_Invention_Disclosure</fullName>
        <columns>NAME</columns>
        <columns>Interaction_Type__c</columns>
        <columns>Related_Master_Organization__c</columns>
        <columns>Interaction_Source_KU_Division__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Joint Invention Disclosure</value>
        </filters>
        <label>Joint Invention Disclosure</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Engagement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <recordTypes>
        <fullName>Agreements</fullName>
        <active>true</active>
        <description>Used to track Agreements</description>
        <label>Agreements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Calls_Emails</fullName>
        <active>true</active>
        <description>Used to track Calls And Emails</description>
        <label>Calls &amp; Emails</label>
    </recordTypes>
    <recordTypes>
        <fullName>Capstone_Projects</fullName>
        <active>true</active>
        <description>Used to track Capstone Projects</description>
        <label>Capstone Projects</label>
    </recordTypes>
    <recordTypes>
        <fullName>Career_Services_Events</fullName>
        <active>true</active>
        <description>Used to track Career Services Events</description>
        <label>Career Services Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Company_Visits_Contact_Activities</fullName>
        <active>true</active>
        <description>Used to track Company Visits, Key Executive Visits and other Contact activities</description>
        <label>Company Visits &amp; Contact Activities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Endowment</fullName>
        <active>true</active>
        <description>Used to track Endowments</description>
        <label>Endowment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events</fullName>
        <active>true</active>
        <description>Used to track Continuing Education Department Events</description>
        <label>Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Executive_Briefings</fullName>
        <active>true</active>
        <description>Used to track Executive Briefings</description>
        <label>Executive Briefings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internship</fullName>
        <active>true</active>
        <description>Used to track Internships at KU</description>
        <label>Internship</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Placement</fullName>
        <active>true</active>
        <description>Used to track Jobs/Placements at KU</description>
        <label>Job/Placement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Placement_Count</fullName>
        <active>true</active>
        <description>Used to track Jobs/Placement Counts at KU</description>
        <label>Job/Placement Count</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Posting</fullName>
        <active>true</active>
        <description>Used to track Job Postings/Campus Interviews</description>
        <label>Job Posting/Campus Interview</label>
    </recordTypes>
    <recordTypes>
        <fullName>Joint_Disclosures</fullName>
        <active>true</active>
        <description>Used to track Joint Disclosures</description>
        <label>Joint Disclosures</label>
    </recordTypes>
    <recordTypes>
        <fullName>Joint_Patents</fullName>
        <active>true</active>
        <description>Used to track Joint Patents</description>
        <label>Joint Patents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Joint_Supervisors</fullName>
        <active>true</active>
        <description>Used to track Joint Supervisors</description>
        <label>Joint Supervisors</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <description>For Future Use</description>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Research_Grants</fullName>
        <active>true</active>
        <description>To track Research Grants</description>
        <label>Research Grants</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Agreements</fullName>
        <active>true</active>
        <description>Used to track Service Agreements</description>
        <label>Service Agreements</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Common_External_Contact_Validation</fullName>
        <active>false</active>
        <description>Common_External_Contact_Validation</description>
        <errorConditionFormula>AND(
Contact__c&lt;&gt;&apos;&apos;,
Contact__r.AccountId &lt;&gt;  Source_Organization__r.Master_Organization__c
)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Contact Selected must be related to the same Master Organization as this Engagement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Common_Interaction_Type_Mandatory</fullName>
        <active>true</active>
        <description>Interaction Type Is Mandatory</description>
        <errorConditionFormula>ISPICKVAL(Interaction_Type__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Engagement Type Is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Engagement_SourceOrg_Cannot_Change</fullName>
        <active>true</active>
        <description>Non-Admin users cannot change Source ROganization on an engagement</description>
        <errorConditionFormula>AND(ISCHANGED( Source_Organization__c ), $Profile.Name &lt;&gt; &quot;System Administrator Clone&quot;, $Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>Only System Administrator Can Change The Source Organization. Please Contact Your System Administrator to make this change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InteractionType_EventContinuingEducation</fullName>
        <active>false</active>
        <description>For Interaction Type = Event - Continuing Education</description>
        <errorConditionFormula>AND(
ISPICKVAL(Interaction_Type__c,&apos;Event - Continuing Education&apos;), OR(
ISBLANK(Count__c),
ISBLANK(Title__c),
ISBLANK(Interaction_Source_System_ID__c)
)
)</errorConditionFormula>
        <errorMessage>Title, Count and Source System ID are mandatory for Continuing Education Events</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interaction_Type_Agreement</fullName>
        <active>false</active>
        <description>All validations for  Interaction Type = Agreement</description>
        <errorConditionFormula>AND(
ISPICKVAL(Interaction_Type__c,&quot;Agreement&quot;),
OR(
ISBLANK(Interaction_Source_System_ID__c),
ISPICKVAL(Agreement_Type__c, &quot;&quot;),
ISPICKVAL(Status__c, &quot;&quot;)
)
)</errorConditionFormula>
        <errorMessage>Source System ID, Agreement Type and Status values are mandatory for Agreements. 
Please enter all values to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interaction_Type_CapstoneProject</fullName>
        <active>false</active>
        <description>All validations for  Interaction Type = Capstone Projects</description>
        <errorConditionFormula>AND(
ISNULL(Amount__c),ISPICKVAL(Interaction_Type__c,&quot;Capstone Project&quot;)
)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Amount is mandatory for Capstone Projects. If Amount is not available, please enter 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interaction_Type_Endowment</fullName>
        <active>false</active>
        <description>All validations for  Interaction Type = Endowments</description>
        <errorConditionFormula>AND(
OR(ISNULL(Amount__c),ISNULL(Interaction_Source_System_ID__c)),ISPICKVAL(Interaction_Type__c,&quot;Endowment&quot;)
)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Amount is mandatory for Endowments. Please enter Amount to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interaction_Type_ITVendor</fullName>
        <active>false</active>
        <description>All validations for  Interaction Type = IT Vendor</description>
        <errorConditionFormula>AND(
ISPICKVAL(Interaction_Type__c,&quot;Key IT Vendor&quot;),
OR(ISNULL(Amount__c),ISNULL(Cost_Savings__c),ISNULL( Key_IT_Vendor_Executive_Briefings__c))
)</errorConditionFormula>
        <errorMessage>Amount, $Cost Savings, # Of Executive Briefings are mandatory for Key IT Vendor. If details are not available, please enter 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interaction_Type_JobInternshipCount</fullName>
        <active>false</active>
        <description>All validations for  Interaction Type = Job/Internship Count</description>
        <errorConditionFormula>AND(
OR(ISNULL(Count__c),ISPICKVAL(Class__c,&quot;&quot;)),ISPICKVAL(Interaction_Type__c,&quot;Job/Internship Count&quot;)
)</errorConditionFormula>
        <errorMessage>Please Enter Year, Class(Term/Semester/Quarter) and Count to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interaction_Type_JointDislosure</fullName>
        <active>false</active>
        <description>All validations for  Interaction Type = Joint Invention Disclosure</description>
        <errorConditionFormula>AND(
ISPICKVAL(Interaction_Type__c,&quot;Joint Invention Disclosure&quot;),
OR(
ISPICKVAL(Status__c,&quot;&quot;),  
ISNULL(Created_Date__c ),
ISNULL(Joint_Disclosure_Date__c),
ISNULL(Interaction_Source_System_ID__c)
)
)</errorConditionFormula>
        <errorMessage>Status, Joint Disclosure Date, Source System Created Date, Engagement Source System ID are mandatory for &apos;Joint Invention Disclosures&apos;.
Please enter all values to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interaction_Type_JointPatent</fullName>
        <active>false</active>
        <description>All validations for  Interaction Type = Joint Patent</description>
        <errorConditionFormula>AND(
ISPICKVAL(Interaction_Type__c,&quot;Joint Patent&quot;),
OR(
ISBLANK(Interaction_Source_System_ID__c),
ISPICKVAL(Status__c, &quot;&quot;),
ISNULL(Created_Date__c),
ISPICKVAL(Joint_Patent_Type__c,&apos;&apos;)
)
)</errorConditionFormula>
        <errorMessage>Source System ID, Source System Created Date, Joint Patent Type and Status values are mandatory for Joint Patents. Please enter all values to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interaction_Type_ServiceAgreement</fullName>
        <active>false</active>
        <description>All validations for  Interaction Type = Service Agreements</description>
        <errorConditionFormula>AND(
OR(ISNULL(Amount__c),ISPICKVAL(Lab__c,&quot;&quot;)),ISPICKVAL(Interaction_Type__c,&quot;Service Agreement&quot;)
)</errorConditionFormula>
        <errorMessage>Lab &amp; Amount values are mandatory for Service Agreements. Please select the Lab and Enter the Amount to Proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Manual_Entry_Restrictions</fullName>
        <active>false</active>
        <description>Manual_Entry_Restrictions</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(Interaction_Type__c,&apos;Interaction - Call&apos;),
ISPICKVAL(Interaction_Type__c,&apos;Interaction - Company Onsite Visit&apos;),
ISPICKVAL(Interaction_Type__c,&apos;Interaction - Email&apos;),
ISPICKVAL(Interaction_Type__c,&apos;Interaction - Executive Briefing&apos;),
ISPICKVAL(Interaction_Type__c,&apos;Interaction - Key Executive Visit&apos;),
ISPICKVAL(Interaction_Type__c,&apos;Interaction - KU Visit&apos;),
ISPICKVAL(Interaction_Type__c,&apos;Interaction - Seminar By Firm At KU&apos;),
ISPICKVAL(Interaction_Type__c,&apos;Interaction - Workshop&apos;) 
),
(NOT(ISPICKVAL(
Source_Organization__r.Source_KU_Division__c,&apos;Corporate Partnerships&apos;)
))
)</errorConditionFormula>
        <errorMessage>This type of Engagement can be related only to Source Organizations where the Source Org Owner is &quot;Corporate Partnerships&quot;</errorMessage>
    </validationRules>
</CustomObject>